Fix footer layout: prevent overflow on smaller window

--- a/asstes/css/style.css
+++ b/asstes/css/style.css
@@ -48,11 +48,6 @@
   width: auto;
 }
 
-.col-5 {
-  width: calc(100% / 5);
-  height: auto;
-}
-
 
 .border-small {
   width:30%;
